k8s-rpi-networkpolicies/dexidp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dexidp-np
  namespace: dexidp
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}  
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-v2
  policyTypes:
    - Ingress
