k8s-rpi-networkpolicies/kube-dns-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-dns
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
      from:
        - namespaceSelector: {}
  policyTypes:
    - Ingress
