k8s-rpi-networkpolicies/kube-system-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-system-np
  namespace: kube-system
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-v2
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tekton-pipelines
  policyTypes:
    - Ingress
