k8s-rpi-networkpolicies/traefik-v2-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-ingress
  namespace: traefik-v2
spec:
  podSelector:
    matchLabels:
      app: traefik
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
  egress:
    - to:
        - namespaceSelector: {}
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
  policyTypes:
    - Ingress
    - Egress
