k8s-rpi-networkpolicies/vault-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-np
  namespace: vault
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-v2
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: external-secrets
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
  policyTypes:
    - Ingress
